--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,11 @@
     },
     "production": {
       "autoIncrement": true
+    },
+    "apk-cloud": {
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
